All CRUD completed

--- a/04-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/04-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.main.banner-mode:off
 
 #Reduce logging level to warn
 logging.level.root=warn
+
+#add logginf config to dislplays SQL statements
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#configuration JPA/Hibernate to autocreate tables
+# update will keep the previous data
+spring.jpa.hibernate.ddl-auto=update
