--- a/05-spring-boot-rest-crud/03-spring-boot-rest-crud-employee-with-spring-data-jpa/pom.xml
+++ b/05-spring-boot-rest-crud/03-spring-boot-rest-crud-employee-with-spring-data-jpa/pom.xml
@@ -29,7 +29,17 @@
 <!--	<properties>-->
 <!--		<java.version>24</java.version>-->
 <!--	</properties>-->
+
+
 	<dependencies>
+		<!--	Add Spring Doc dependency-->
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.13</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
