--- a/05-spring-boot-rest-crud/03-spring-boot-rest-crud-employee-with-spring-data-jpa/src/main/resources/application.properties
+++ b/05-spring-boot-rest-crud/03-spring-boot-rest-crud-employee-with-spring-data-jpa/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.application.name=cruddemo
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+#Configure custom path for swagger ui
+
+springdoc.swagger-ui.path=/my-ui.html
