added dependency for spring security

--- a/05-spring-boot-rest-crud/05-spring-boot-rest-crud-employee-with-spring-data-rest-swagger_ui/src/main/resources/application.properties
+++ b/05-spring-boot-rest-crud/05-spring-boot-rest-crud-employee-with-spring-data-rest-swagger_ui/src/main/resources/application.properties
@@ -5,9 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
-##Configure custom path for swagger ui
-#
-#springdoc.swagger-ui.path=/my-ui.html
-#
-##Configure custom path for apidocs
-#springdoc.api-doc.path=/my-api-docs
+#spring data rest properties
+
+spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=20
