--- a/05-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.properties
+++ b/05-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=springstudent
 
 spring.data.rest.base-path=/magic-api
 spring.data.rest.default-page-size=20
+
+#add logging to check
