added readio button for language

--- a/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/application.properties
+++ b/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=thymleafdemo
 countries= France,Brazil,Germany,India,Sri Lanka,China
+languages= Java, Python, Go, C, hybris
