added check box to display OSsystems

--- a/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/application.properties
+++ b/07-spring-boot-spring-mvc/01-thymleafdemo-helloworld/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=thymleafdemo
 countries= France,Brazil,Germany,India,Sri Lanka,China
 languages= Java, Python, Go, C, hybris
+systems= Windows, MacOs, Linux, 
