--- a/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/application.properties
+++ b/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demosecurity
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
