added intructor and added method created object for one to one mapping

--- a/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/application.properties
+++ b/08-spring-boot-spring-security/01-spring-boot-spring-mvc-security-default/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=springstudent
 
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+spring.main.banner-mode=off
