Added code for one to one mapping

--- a/09-springboot-jpa-advance-mapping/01-crud-one-one-mapping/src/main/resources/application.properties
+++ b/09-springboot-jpa-advance-mapping/01-crud-one-one-mapping/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.main.banner-mode=off
 
 #Reduce logging level
 logging.level.root=warn
+
+#show jpa/hibernate logging messages
+logging.level.org.hibernate.sql=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
