added ordered for aspects

--- a/10-springboot-aop/02-springboot-aopDemo-pointcut-declaration/src/main/resources/application.properties
+++ b/10-springboot-aop/02-springboot-aopDemo-pointcut-declaration/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.main.banner-mode=off
 #Reduce logging lever set logging level to warn
 logging.level.root=warn
 
+#Enable Logging for apo
+logging.level.org.springframework.aop=DEBUG
+
 
